# ts-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
.beads/: config.yaml  issues.jsonl
backend/: pyproject.toml
backend/app/: __init__.py  config.py  equipment.py  main.py  plan_groups.py  plan_templates.py  profiles.py
backend/app/api/: equipment.py  export.py  plan_groups.py  plan_templates.py  profiles.py  projects.py  surveys.py  templates.py
backend/app/astro/: __init__.py  fov.py
backend/app/db/: __init__.py  backup.py  export.py  introspect.py  models.py  ops.py  provenance.py  reader.py  schema.py  validate.py  working_copy.py  writer.py
backend/tests/: make_fixture.py  test_api_export.py  test_config.py  test_db_version.py  test_equipment.py  test_export.py  test_fov.py  test_live_mode.py  test_plan_groups.py  test_plan_templates.py  test_profiles.py  test_reader.py  test_roundtrip.py  test_staging.py  test_validate.py  test_writability.py  test_write_path.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  aladin-lite.d.ts  api.ts  index.css  templateLabel.ts
frontend/src/panels/: EquipmentPanel.tsx  NewTemplateModal.tsx  OverrideOrderEditor.tsx  PlanGroupsPanel.tsx  PlanTemplatesPanel.tsx  ProfilePicker.tsx  ProjectBuilder.tsx  ProjectList.tsx  ProjectSettingsEditor.tsx  RuleWeightsEditor.tsx
frontend/src/sky/: AladinView.tsx  fov.ts  skyObjects.generated.json  skyObjects.ts
scripts/: gen_named_objects.py
