[project]
name = "ts-assistant-backend"
version = "0.1.0"
description = "Backend for TS Assistant — a Target Scheduler companion app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    # astropy is added in phase 2 (FOV / mosaic geometry); v1 is read-only.
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.uv]
package = false
